--- a/source/_posts/所谓设计模式.md
+++ b/source/_posts/所谓设计模式.md
@@ -73,24 +73,74 @@ def sender_factory(type):
 
 ## 抽象工厂模式
 
-
-将组装的部分放在一个类里面，组成一个实体
+将组装的部分（产品）放在一个工厂类里面，组成一个实体。
+也可以认为前面的工厂模式是这里的产品。
+注意，各产品的统一方法，各工厂的统一方法。
 
 ```
-class 头:
-    pass
-class 身体:
-    pass
-class 肢体:
-    pass
+class 鸭子头:
+    def talk(self):
+        print("鸭子叫")
+class 鸭子身体:
+    def move(self):
+        print("鸭子摆尾巴")
+class 鸭子肢体:
+    def walk(self):
+        print("鸭子走路")
+
+class 鸡头:
+    def talk(self):
+        print("鸡鸣")
+class 鸡身体:
+    def move(self):
+        print("鸡摆尾巴")
+class 鸡肢体:
+    def walk(self):
+        print("鸡走路")
 
 class 鸭子:
-    return 头() + 身体() + 肢体()
+    """
+    本工厂包含了多个产品
+    """
+    def show():
+        return 鸭子头() + 鸭子身体() + 鸭子肢体()
 
+class 鸡:
+    """
+    本工厂包含了多个产品
+    """
+    def show():
+        return 鸡头() + 鸡身体() + 鸡肢体()
+
+
+class Test(factory):
+    """
+    具体的使用
+    """
+    factory.show()
+    
 ```
 
-## 工厂模式
+## 单例模式
+对 python ，class 默认就是单例
+
+优点：
+- 优化内存占用
+
+## 建造者模式
+
+## 原型模式
+
+# 结构型模式
+
+## 建造者模式
+## 建造者模式
+## 建造者模式
+## 建造者模式
+## 建造者模式
+## 建造者模式
 
 * 参考 *
 - https://www.cnblogs.com/geek6/p/3951677.html
 - 《精通python设计模式》
+
